# wet1BenShai

./: AVL.h  CMakeCache.txt  CMakeLists.txt  Clan-unite  Course.h  HoursAndCounters.h  HoursAndCountersTestUnit.cpp  HoursAndTrees.h  HoursAndTreesTestUnit.cpp  Lecture.h  Makefile  auxFunction.h  avlStruct.h  cmake_install.cmake  library.cpp  mainTrue.cpp  new 1.txt  pleasedontfuckus  pp.cbp  scheduleMatrix.h  scheduleMatrixTestUnit.cpp  system.h  wet1DryPart.docx  wwww.txt
